--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   </head>
 
   <body>
+    <h1>
+      Bitte lies und akzeptiere die Endbenutzer-Lizenzvereinbarung, um
+      fortzufahren
+    </h1>
     <div class="eula-container">
       <section class="eula-text">
         <h2>End-User License Agreement</h2>
@@ -135,6 +139,10 @@
           culpa qui officia deserunt mollit anim id est laborum.
         </p>
       </section>
+    </div>
+    <div style="margin-top: 20px">
+      <button id="accept-button">Akzeptieren</button>
+      <a href="https://example.org" id="reject-link">Ablehnen</a>
     </div>
   </body>
 </html>
